--- a/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
+++ b/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "1f0231d2",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "03ce9b9c",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
     "\n",
     "\n",
     "# Criar pontos para plotar a função original:\n",
-    "x = np.linspace(0, 1, 100) # 100 pontos entre 0 e 3\n",
+    "x = np.linspace(a, b, 100) # 100 pontos entre 0 e 3\n",
     "y = f(x)\n",
     "\n",
     "# Calcula a primitiva em cada ponto x\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "3f96ac71",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "4b3f90d1",
    "metadata": {},
    "outputs": [
