--- a/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
+++ b/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "id": "1f0231d2",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "id": "03ce9b9c",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "id": "3f96ac71",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "id": "4b3f90d1",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,8 @@
     "\n",
     "# Se quiser, pode plotar a integral da solução analítica:\n",
     "# plt.fill_between(x, y, where=y >= 0, alpha=0.25, color='blue', label='Área da Integral')\n",
-    "plt.fill_between(x, y, where=y >= 0, alpha=0.25, color='blue')\n",
+    "# plt.fill_between(x, y, where=y >= 0, alpha=0.25, color='blue')\n",
+    "plt.fill_between(x, y, alpha=0.25, color='blue')\n",
     "plt.xlabel('x')\n",
     "plt.ylabel('y')\n",
     "plt.title('Solução analítica')\n",
@@ -361,7 +362,8 @@
     "\n",
     "     plt.plot(x_Trapezios, y_Trapezios, label='Função P_1(x)')\n",
     "    #  plt.fill_between(x_Trapezios, y_Trapezios, where=y_Trapezios >= 0, alpha=0.25, color='blue', label='Área da Integral')\n",
-    "     plt.fill_between(x_Trapezios, y_Trapezios, where=y_Trapezios >= 0, alpha=0.25, color='red')\n",
+    "    #  plt.fill_between(x_Trapezios, y_Trapezios, where=y_Trapezios >= 0, alpha=0.25, color='red')\n",
+    "     plt.fill_between(x_Trapezios, y_Trapezios, alpha=0.25, color='red')\n",
     "     plt.xlabel('x')\n",
     "     plt.ylabel('y')\n",
     "     plt.title('Trapézios')\n",
@@ -384,7 +386,8 @@
     "     \n",
     "    plt.plot(x_Simpson, y_Simpson, label='Função P_2(x)', color='green')\n",
     "    #  plt.fill_between(x_Simpson, y_Simpson, where=y_Simpson >= 0, alpha=0.25, color='red', label='Área da Integral')\n",
-    "    plt.fill_between(x_Simpson, y_Simpson, where=y_Simpson >= 0, alpha=0.25, color='green')\n",
+    "    # plt.fill_between(x_Simpson, y_Simpson, where=y_Simpson >= 0, alpha=0.25, color='green')\n",
+    "    plt.fill_between(x_Simpson, y_Simpson, alpha=0.25, color='green')\n",
     "    plt.xlabel('x')\n",
     "    plt.ylabel('y')\n",
     "    plt.title('(1/3) Simpson')\n",
