--- a/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
+++ b/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "id": "1f0231d2",
    "metadata": {},
    "outputs": [],
@@ -93,8 +93,11 @@
     "\n",
     "# Define a função a ser integrada: \n",
     "def f(x):\n",
-    "        # return x**2  # Exemplo: x²\n",
-    "        return np.exp(x)  # Exemplo: e^x\n",
+    "        return np.exp(x)  # Exemplo: e^x  ## intervalo: [a,b] = [0,1]\n",
+    "        # return 1/(np.sqrt(2 + x**3))  ## intervalo: [a,b] = [0,1]\n",
+    "        # return np.exp(-x**2) ## intervalo: [a,b] = [1,2]\n",
+    "        # return x**2  # Exemplo: x²  ## intervalo: [a,b] = [0,1]\n",
+    "        # return np.exp(2 * x) * np.sin(3 * x) ## intervalo: [a,b] = [0,2]\n",
     "\n",
     "# Define o polinômio de grau 1 para a Regra dos Trapézios repetida:\n",
     "def P_1(x,x_i,x_j):\n",
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "id": "03ce9b9c",
    "metadata": {},
    "outputs": [],
@@ -241,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 103,
    "id": "3f96ac71",
    "metadata": {},
    "outputs": [
@@ -294,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 105,
    "id": "4b3f90d1",
    "metadata": {},
    "outputs": [
