--- a/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
+++ b/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "id": "1f0231d2",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "id": "03ce9b9c",
    "metadata": {},
    "outputs": [],
@@ -206,13 +206,13 @@
     "from scipy.integrate import quad\n",
     "\n",
     "# Função que calcula a função primitiva de f(x) em x.\n",
-    "def anti_derivada(a,x):\n",
-    "        # A função quad da biblioteca scipy retorna como saídas:\n",
-    "        # integral: O cálculo da integral de a até x. \n",
-    "        # err: o erro do cálculo da integral\n",
-    "        # Obs.: O símbolo \"_\" é para omitir a variável de erro \"err\" da integral \n",
-    "        integral, _ = quad(f, a, x)  \n",
-    "        return integral\n",
+    "# def anti_derivada(a,x):\n",
+    "#         # A função quad da biblioteca scipy retorna como saídas:\n",
+    "#         # integral: O cálculo da integral de a até x. \n",
+    "#         # err: o erro do cálculo da integral\n",
+    "#         # Obs.: O símbolo \"_\" é para omitir a variável de erro \"err\" da integral \n",
+    "#         integral, _ = quad(f, a, x)  \n",
+    "#         return integral\n",
     "\n",
     "\n",
     "# Criar pontos para plotar a função original:\n",
@@ -220,7 +220,7 @@
     "y = f(x)\n",
     "\n",
     "# Calcula a primitiva em cada ponto x\n",
-    "y_primitiva = [anti_derivada(a,xi) for xi in x] \n",
+    "# y_primitiva = [anti_derivada(a,xi) for xi in x] \n",
     "\n",
     "# 3. Calcule a integral (opcional, se quiser o valor): \n",
     "integral_valor, _ = quad(f, a, b) # integral_valor é o valor numérico da integral"
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "id": "3f96ac71",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "id": "4b3f90d1",
    "metadata": {},
    "outputs": [
