--- a/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
+++ b/Python - Jupyter Notebook/Integração numérica/Integracao_Numerica.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1f0231d2",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
     "def P_1(x,x_i,x_j):\n",
     "     return ((x - x_j)/(x_i - x_j))*f(x_i) + ((x - x_i)/(x_j - x_i))*f(x_j)\n",
     "\n",
-    "# Define o polinômio de grau 1 para a Regra (1/3) de Simpson repetida:\n",
+    "# Define o polinômio de grau 2 para a Regra (1/3) de Simpson repetida:\n",
     "def P_2(x,x_i,x_j,x_k):\n",
     "     return ((x - x_j) * (x - x_k))/((x_i - x_j) * (x_i - x_k))*f(x_i) \\\n",
     "            + ((x - x_i) * (x - x_k))/((x_j - x_i) * (x_j - x_k))*f(x_j) \\\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "03ce9b9c",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3f96ac71",
    "metadata": {},
    "outputs": [
@@ -253,6 +253,11 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "\n",
+      "\n",
+      "-------------------------------------------------------------\n",
+      "RESULTADOS:\n",
+      "-------------------------------------------------------------\n",
       "\n",
       "\n",
       "Solução analítica:  1.7182818284590453\n",
@@ -266,12 +271,27 @@
       "(1/3) Simpson:  1.7182818881038568\n",
       "\n",
       "\n",
+      "\n",
+      "-------------------------------------------------------------\n",
+      "ERROS ABSOLUTOS:\n",
+      "-------------------------------------------------------------\n",
+      "\n",
+      "\n",
+      "Erro Trapézios: 0.00035796046617608823\n",
+      "\n",
+      "\n",
+      "Erro Simpson: 5.964481153419854e-08\n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print('\\n\\n')\n",
+    "print('-------------------------------------------------------------')\n",
+    "print('RESULTADOS:')\n",
+    "print('-------------------------------------------------------------')\n",
+    "print('\\n')\n",
     "print('Solução analítica: ', integral_valor)\n",
     "print('\\n\\n')\n",
     "int_Trapezios = Integral_Trapezios(n_T,a,b)\n",
@@ -284,6 +304,20 @@
     "        print('\\n\\n')\n",
     "else:\n",
     "        print('Erro! Na Regra (1/3) de Simpson, n deve ser par!!!')\n",
+    "\n",
+    "### Exibição dos erros absolutos:\n",
+    "print('-------------------------------------------------------------')\n",
+    "print('ERROS ABSOLUTOS:')\n",
+    "print('-------------------------------------------------------------')\n",
+    "print('\\n')\n",
+    "Erro_Trapezios = np.abs(integral_valor - int_Trapezios)\n",
+    "print('Erro Trapézios:', Erro_Trapezios)\n",
+    "print('\\n')\n",
+    "if n_S % 2 == 0:\n",
+    "        ### Se n_S for par, os resultados de Simpson são exibidos:\n",
+    "        Erro_Simpson = np.abs(integral_valor - int_Simpson)\n",
+    "        print('Erro Simpson:', Erro_Simpson)\n",
+    "print('\\n')\n",
     "        "
    ]
   },
@@ -297,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4b3f90d1",
    "metadata": {},
    "outputs": [
