--- a/Python - Jupyter Notebook/Métodos numéricos para EDO/EDO_Euler_RK2.ipynb
+++ b/Python - Jupyter Notebook/Métodos numéricos para EDO/EDO_Euler_RK2.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "1f0231d2",
    "metadata": {},
    "outputs": [
@@ -179,10 +179,10 @@
     "\n",
     "\n",
     "# Condição inicial:\n",
-    "x_0 = 0\n",
     "y_0 = 1\n",
     "\n",
-    "# Ponto final:\n",
+    "# Pontos extremos do intervalo [x_0,x_n]:\n",
+    "x_0 = 0\n",
     "x_n = 1\n",
     "\n",
     "# Numero de intervalos (passos):\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "4b3f90d1",
    "metadata": {},
    "outputs": [
